old_tests/tests/lean/synth_inferred_mismatch.lean.expected.out
synth_inferred_mismatch.lean:7:1: error: synthesized type class instance is not definitionally equal to expression inferred by typing rules, synthesized
  _inst_1
inferred
  is_true h
